feat(commitizen): Adiciona commitizen

--- a/package.json
+++ b/package.json
@@ -10,5 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "cypress": "^3.3.1"
+  },
+  "devDependencies": {
+    "cz-conventional-changelog": "^2.1.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
